Dynamic Paint image sequence bake crashes if mesh has no UV layer #47317

Closed
opened 2016-02-04 01:04:58 +01:00 by Kévin Dietrich · 7 comments

System Information
Linux 64-bit

Blender Version
Broken: 24eecb0

Short description of error
Dynamic Paint image sequence bake crashes if mesh has no UV layer

Exact steps for others to reproduce the error
With default startup file:

  • add dynamic paint modifier to cube
  • add canvas, set format to "Image Sequence"
  • in the "Dynamic Paint Output" panel, hit "Bake Image Sequence"

File ready for step 3: dpaint_crash.blend

**System Information** Linux 64-bit **Blender Version** Broken: 24eecb0 **Short description of error** Dynamic Paint image sequence bake crashes if mesh has no UV layer **Exact steps for others to reproduce the error** With default startup file: * add dynamic paint modifier to cube * add canvas, set format to "Image Sequence" * in the "Dynamic Paint Output" panel, hit "Bake Image Sequence" File ready for step 3: [dpaint_crash.blend](https://archive.blender.org/developer/F279856/dpaint_crash.blend)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @kevindietrich

Added subscriber: @kevindietrich
Author
Member

Here I'm not too sure what would be the best way to address the issue, however the following patch does the trick:

diff --git a/source/blender/editors/physics/dynamicpaint_ops.c b/source/blender/editors/physics/dynamicp
index 7cc17e4..466c837 100644
--- a/source/blender/editors/physics/dynamicpaint_ops.c
+++ b/source/blender/editors/physics/dynamicpaint_ops.c
@@ -469,6 +469,11 @@ static int dynamicpaint_bake_exec(struct bContext *C, struct wmOperator *op)
        }
        surface = get_activeSurface(canvas);
 
+       if (STREQ(surface->uvlayer_name, "")) {
+               BKE_report(op->reports, RPT_ERROR, "Bake failed: no UV layer selected!");
+               return OPERATOR_CANCELLED;
+       }
+
        /* Set state to baking and init surface */
        canvas->error[0] = '\0';
        canvas->flags |= MOD_DPAINT_BAKING;

Though, if the UV layer selector is empty in the UI, it is still possible that the mesh has a UV layer and the operator will use that one, so not sure if cancelling the operator is the right fix here.


Also here's the asan output:

## 20850==ERROR: AddressSanitizer: heap-buffer-overflow on address 0x61600012c940 at pc 0x000002aa898f bp 0x7f0a62234570 sp 0x7f0a62234568
READ of size 1 at 0x61600012c940 thread #29
    - 0 0x2aa898e in BLI_strnlen /home/kevin/src/blender-git/blender/source/blender/blenlib/intern/string.c:728
    - 1 0x2aa89e9 in BLI_strncpy /home/kevin/src/blender-git/blender/source/blender/blenlib/intern/string.c:116
    - 2 0x21a8d04 in CustomData_validate_layer_name /home/kevin/src/blender-git/blender/source/blender/blenkernel/intern/customdata.c:3444
    - 3 0x21f4959 in dynamicPaint_createUVSurface /home/kevin/src/blender-git/blender/source/blender/blenkernel/intern/dynamicpaint.c:2192
    - 4 0x1a82ab2 in dynamicPaint_bakeImageSequence /home/kevin/src/blender-git/blender/source/blender/editors/physics/dynamicpaint_ops.c:361
    - 5 0x1a830c7 in dpaint_bake_startjob /home/kevin/src/blender-git/blender/source/blender/editors/physics/dynamicpaint_ops.c:437
    - 6 0x13b634c in do_job_thread /home/kevin/src/blender-git/blender/source/blender/windowmanager/intern/wm_jobs.c:348
    - 7 0x2aaf8f1 in tslot_thread_start /home/kevin/src/blender-git/blender/source/blender/blenlib/intern/threads.c:254
    - 8 0x7f0a8fca8181 in start_thread (/lib/x86_64-linux-gnu/libpthread.so.0+0x8181)
    - 9 0x7f0a8d8da47c in __clone (/lib/x86_64-linux-gnu/libc.so.6+0xfa47c)

0x61600012c940 is located 64 bytes to the left of 528-byte region [0x61600012c980,0x61600012cb90)
allocated by thread #14 here:
    - 0 0x7f0a921e45b1 in __interceptor_calloc (/usr/lib/x86_64-linux-gnu/libasan.so.2+0x945b1)
    - 1 0x2beb8f0 in MEM_lockfree_callocN /home/kevin/src/blender-git/blender/intern/guardedalloc/intern/mallocn_lockfree_impl.c:286
    - 2 0x219d240 in customData_resize /home/kevin/src/blender-git/blender/source/blender/blenkernel/intern/customdata.c:1829
    - 3 0x21a5e9e in customData_add_layer__internal /home/kevin/src/blender-git/blender/source/blender/blenkernel/intern/customdata.c:1892
    - 4 0x21a86a4 in CustomData_add_layer /home/kevin/src/blender-git/blender/source/blender/blenkernel/intern/customdata.c:1940
    - 5 0x20c74a0 in DM_DupPolys /home/kevin/src/blender-git/blender/source/blender/blenkernel/intern/DerivedMesh.c:422
    - 6 0x21385a5 in cddm_copy_ex /home/kevin/src/blender-git/blender/source/blender/blenkernel/intern/cdderivedmesh.c:2435
    - 7 0x2138664 in CDDM_copy /home/kevin/src/blender-git/blender/source/blender/blenkernel/intern/cdderivedmesh.c:2447
    - 8 0x21d848f in canvas_copyDerivedMesh /home/kevin/src/blender-git/blender/source/blender/blenkernel/intern/dynamicpaint.c:1826
    - 9 0x21f6361 in dynamicPaint_frameUpdate /home/kevin/src/blender-git/blender/source/blender/blenkernel/intern/dynamicpaint.c:1839
    - 10 0x21f6b4b in dynamicPaint_Modifier_do /home/kevin/src/blender-git/blender/source/blender/blenkernel/intern/dynamicpaint.c:1914
    - 11 0x1ea5227 in applyModifier /home/kevin/src/blender-git/blender/source/blender/modifiers/intern/MOD_dynamicpaint.c:111
    - 12 0x22f2d04 in modwrap_applyModifier /home/kevin/src/blender-git/blender/source/blender/blenkernel/intern/modifier.c:744
    - 13 0x20d1f40 in mesh_calc_modifiers /home/kevin/src/blender-git/blender/source/blender/blenkernel/intern/DerivedMesh.c:2033
    - 14 0x20d2876 in mesh_build_data /home/kevin/src/blender-git/blender/source/blender/blenkernel/intern/DerivedMesh.c:2573
    - 15 0x20d2c6c in makeDerivedMesh /home/kevin/src/blender-git/blender/source/blender/blenkernel/intern/DerivedMesh.c:2670
    - 16 0x2353cf4 in BKE_object_handle_data_update /home/kevin/src/blender-git/blender/source/blender/blenkernel/intern/object_update.c:201
    - 17 0x23449de in BKE_object_handle_update_ex /home/kevin/src/blender-git/blender/source/blender/blenkernel/intern/object.c:3163
    - 18 0x23db1f6 in scene_update_object_func /home/kevin/src/blender-git/blender/source/blender/blenkernel/intern/scene.c:1520
    - 19 0x2aad931 in task_scheduler_thread_run /home/kevin/src/blender-git/blender/source/blender/blenlib/intern/task.c:196
    #20 0x7f0a8fca8181 in start_thread (/lib/x86_64-linux-gnu/libpthread.so.0+0x8181)

Thread #29 created by T0 here:
    - 0 0x7f0a92186474 in pthread_create (/usr/lib/x86_64-linux-gnu/libasan.so.2+0x36474)
    - 1 0x2aafe11 in BLI_insert_thread /home/kevin/src/blender-git/blender/source/blender/blenlib/intern/threads.c:270
    - 2 0x13b75fc in WM_jobs_start /home/kevin/src/blender-git/blender/source/blender/windowmanager/intern/wm_jobs.c:433
    - 3 0x1a8265f in dynamicpaint_bake_exec /home/kevin/src/blender-git/blender/source/blender/editors/physics/dynamicpaint_ops.c:494
    - 4 0x13a5621 in wm_operator_invoke /home/kevin/src/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:1105
    - 5 0x13a5fae in wm_operator_call_internal /home/kevin/src/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:1290
    - 6 0x13a662c in WM_operator_name_call_ptr /home/kevin/src/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:1338
    - 7 0x1830ee0 in ui_apply_but_funcs_after /home/kevin/src/blender-git/blender/source/blender/editors/interface/interface_handlers.c:768
    - 8 0x1853cc7 in ui_handler_region_menu /home/kevin/src/blender-git/blender/source/blender/editors/interface/interface_handlers.c:9912
    - 9 0x13a0687 in wm_handler_ui_call /home/kevin/src/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:453
    - 10 0x13a8d1c in wm_handlers_do_intern /home/kevin/src/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:2052
    - 11 0x13a91a4 in wm_handlers_do /home/kevin/src/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:2136
    - 12 0x13a9ad5 in wm_event_do_handlers /home/kevin/src/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:2419
    - 13 0x1392a66 in WM_main /home/kevin/src/blender-git/blender/source/blender/windowmanager/intern/wm.c:489
    - 14 0x1390de1 in main /home/kevin/src/blender-git/blender/source/creator/creator.c:2097
    - 15 0x7f0a8d801ec4 in __libc_start_main (/lib/x86_64-linux-gnu/libc.so.6+0x21ec4)

Thread #14 created by T0 here:
    - 0 0x7f0a92186474 in pthread_create (/usr/lib/x86_64-linux-gnu/libasan.so.2+0x36474)
    - 1 0x2aae11f in BLI_task_scheduler_create /home/kevin/src/blender-git/blender/source/blender/blenlib/intern/task.c:248
    - 2 0x2ab0249 in BLI_task_scheduler_get /home/kevin/src/blender-git/blender/source/blender/blenlib/intern/threads.c:174
    - 3 0x23db885 in scene_update_objects /home/kevin/src/blender-git/blender/source/blender/blenkernel/intern/scene.c:1639
    - 4 0x23de93f in scene_update_tagged_recursive /home/kevin/src/blender-git/blender/source/blender/blenkernel/intern/scene.c:1720
    - 5 0x23dec96 in BKE_scene_update_tagged /home/kevin/src/blender-git/blender/source/blender/blenkernel/intern/scene.c:1823
    - 6 0x13a32f8 in wm_event_do_notifiers /home/kevin/src/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:406
    - 7 0x1392a6e in WM_main /home/kevin/src/blender-git/blender/source/blender/windowmanager/intern/wm.c:492
    - 8 0x1390de1 in main /home/kevin/src/blender-git/blender/source/creator/creator.c:2097
    - 9 0x7f0a8d801ec4 in __libc_start_main (/lib/x86_64-linux-gnu/libc.so.6+0x21ec4)

SUMMARY: AddressSanitizer: heap-buffer-overflow /home/kevin/src/blender-git/blender/source/blender/blenlib/intern/string.c:728 BLI_strnlen
Shadow bytes around the buggy address:
  0x0c2c8001d8d0: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
  0x0c2c8001d8e0: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
  0x0c2c8001d8f0: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
  0x0c2c8001d900: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
  0x0c2c8001d910: 00 00 fa fa fa fa fa fa fa fa fa fa fa fa fa fa
# >0x0c2c8001d920: fa fa fa fa fa fa fa fa[fa]fa fa fa fa fa fa fa
  0x0c2c8001d930: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
  0x0c2c8001d940: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
  0x0c2c8001d950: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
  0x0c2c8001d960: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
  0x0c2c8001d970: 00 00 fa fa fa fa fa fa fa fa fa fa fa fa fa fa
Shadow byte legend (one shadow byte represents 8 application bytes):

Addressable: 00
Partially addressable: 01 02 03 04 05 06 07
Heap left redzone: fa
Heap right redzone: fb
Freed heap region: fd
Stack left redzone: f1
Stack mid redzone: f2
Stack right redzone: f3
Stack partial redzone: f4
Stack after return: f5
Stack use after scope: f8
Global redzone: f9
Global init order: f6
Poisoned by user: f7
Container overflow: fc
Array cookie: ac
Intra object redzone: bb
ASan internal: fe

## 20850==ABORTING
Here I'm not too sure what would be the best way to address the issue, however the following patch does the trick: ``` diff --git a/source/blender/editors/physics/dynamicpaint_ops.c b/source/blender/editors/physics/dynamicp index 7cc17e4..466c837 100644 --- a/source/blender/editors/physics/dynamicpaint_ops.c +++ b/source/blender/editors/physics/dynamicpaint_ops.c @@ -469,6 +469,11 @@ static int dynamicpaint_bake_exec(struct bContext *C, struct wmOperator *op) } surface = get_activeSurface(canvas); + if (STREQ(surface->uvlayer_name, "")) { + BKE_report(op->reports, RPT_ERROR, "Bake failed: no UV layer selected!"); + return OPERATOR_CANCELLED; + } + /* Set state to baking and init surface */ canvas->error[0] = '\0'; canvas->flags |= MOD_DPAINT_BAKING; ``` Though, if the UV layer selector is empty in the UI, it is still possible that the mesh has a UV layer and the operator will use that one, so not sure if cancelling the operator is the right fix here. ---- Also here's the asan output: ``` lines=4 ## 20850==ERROR: AddressSanitizer: heap-buffer-overflow on address 0x61600012c940 at pc 0x000002aa898f bp 0x7f0a62234570 sp 0x7f0a62234568 READ of size 1 at 0x61600012c940 thread #29 - 0 0x2aa898e in BLI_strnlen /home/kevin/src/blender-git/blender/source/blender/blenlib/intern/string.c:728 - 1 0x2aa89e9 in BLI_strncpy /home/kevin/src/blender-git/blender/source/blender/blenlib/intern/string.c:116 - 2 0x21a8d04 in CustomData_validate_layer_name /home/kevin/src/blender-git/blender/source/blender/blenkernel/intern/customdata.c:3444 - 3 0x21f4959 in dynamicPaint_createUVSurface /home/kevin/src/blender-git/blender/source/blender/blenkernel/intern/dynamicpaint.c:2192 - 4 0x1a82ab2 in dynamicPaint_bakeImageSequence /home/kevin/src/blender-git/blender/source/blender/editors/physics/dynamicpaint_ops.c:361 - 5 0x1a830c7 in dpaint_bake_startjob /home/kevin/src/blender-git/blender/source/blender/editors/physics/dynamicpaint_ops.c:437 - 6 0x13b634c in do_job_thread /home/kevin/src/blender-git/blender/source/blender/windowmanager/intern/wm_jobs.c:348 - 7 0x2aaf8f1 in tslot_thread_start /home/kevin/src/blender-git/blender/source/blender/blenlib/intern/threads.c:254 - 8 0x7f0a8fca8181 in start_thread (/lib/x86_64-linux-gnu/libpthread.so.0+0x8181) - 9 0x7f0a8d8da47c in __clone (/lib/x86_64-linux-gnu/libc.so.6+0xfa47c) 0x61600012c940 is located 64 bytes to the left of 528-byte region [0x61600012c980,0x61600012cb90) allocated by thread #14 here: - 0 0x7f0a921e45b1 in __interceptor_calloc (/usr/lib/x86_64-linux-gnu/libasan.so.2+0x945b1) - 1 0x2beb8f0 in MEM_lockfree_callocN /home/kevin/src/blender-git/blender/intern/guardedalloc/intern/mallocn_lockfree_impl.c:286 - 2 0x219d240 in customData_resize /home/kevin/src/blender-git/blender/source/blender/blenkernel/intern/customdata.c:1829 - 3 0x21a5e9e in customData_add_layer__internal /home/kevin/src/blender-git/blender/source/blender/blenkernel/intern/customdata.c:1892 - 4 0x21a86a4 in CustomData_add_layer /home/kevin/src/blender-git/blender/source/blender/blenkernel/intern/customdata.c:1940 - 5 0x20c74a0 in DM_DupPolys /home/kevin/src/blender-git/blender/source/blender/blenkernel/intern/DerivedMesh.c:422 - 6 0x21385a5 in cddm_copy_ex /home/kevin/src/blender-git/blender/source/blender/blenkernel/intern/cdderivedmesh.c:2435 - 7 0x2138664 in CDDM_copy /home/kevin/src/blender-git/blender/source/blender/blenkernel/intern/cdderivedmesh.c:2447 - 8 0x21d848f in canvas_copyDerivedMesh /home/kevin/src/blender-git/blender/source/blender/blenkernel/intern/dynamicpaint.c:1826 - 9 0x21f6361 in dynamicPaint_frameUpdate /home/kevin/src/blender-git/blender/source/blender/blenkernel/intern/dynamicpaint.c:1839 - 10 0x21f6b4b in dynamicPaint_Modifier_do /home/kevin/src/blender-git/blender/source/blender/blenkernel/intern/dynamicpaint.c:1914 - 11 0x1ea5227 in applyModifier /home/kevin/src/blender-git/blender/source/blender/modifiers/intern/MOD_dynamicpaint.c:111 - 12 0x22f2d04 in modwrap_applyModifier /home/kevin/src/blender-git/blender/source/blender/blenkernel/intern/modifier.c:744 - 13 0x20d1f40 in mesh_calc_modifiers /home/kevin/src/blender-git/blender/source/blender/blenkernel/intern/DerivedMesh.c:2033 - 14 0x20d2876 in mesh_build_data /home/kevin/src/blender-git/blender/source/blender/blenkernel/intern/DerivedMesh.c:2573 - 15 0x20d2c6c in makeDerivedMesh /home/kevin/src/blender-git/blender/source/blender/blenkernel/intern/DerivedMesh.c:2670 - 16 0x2353cf4 in BKE_object_handle_data_update /home/kevin/src/blender-git/blender/source/blender/blenkernel/intern/object_update.c:201 - 17 0x23449de in BKE_object_handle_update_ex /home/kevin/src/blender-git/blender/source/blender/blenkernel/intern/object.c:3163 - 18 0x23db1f6 in scene_update_object_func /home/kevin/src/blender-git/blender/source/blender/blenkernel/intern/scene.c:1520 - 19 0x2aad931 in task_scheduler_thread_run /home/kevin/src/blender-git/blender/source/blender/blenlib/intern/task.c:196 #20 0x7f0a8fca8181 in start_thread (/lib/x86_64-linux-gnu/libpthread.so.0+0x8181) Thread #29 created by T0 here: - 0 0x7f0a92186474 in pthread_create (/usr/lib/x86_64-linux-gnu/libasan.so.2+0x36474) - 1 0x2aafe11 in BLI_insert_thread /home/kevin/src/blender-git/blender/source/blender/blenlib/intern/threads.c:270 - 2 0x13b75fc in WM_jobs_start /home/kevin/src/blender-git/blender/source/blender/windowmanager/intern/wm_jobs.c:433 - 3 0x1a8265f in dynamicpaint_bake_exec /home/kevin/src/blender-git/blender/source/blender/editors/physics/dynamicpaint_ops.c:494 - 4 0x13a5621 in wm_operator_invoke /home/kevin/src/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:1105 - 5 0x13a5fae in wm_operator_call_internal /home/kevin/src/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:1290 - 6 0x13a662c in WM_operator_name_call_ptr /home/kevin/src/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:1338 - 7 0x1830ee0 in ui_apply_but_funcs_after /home/kevin/src/blender-git/blender/source/blender/editors/interface/interface_handlers.c:768 - 8 0x1853cc7 in ui_handler_region_menu /home/kevin/src/blender-git/blender/source/blender/editors/interface/interface_handlers.c:9912 - 9 0x13a0687 in wm_handler_ui_call /home/kevin/src/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:453 - 10 0x13a8d1c in wm_handlers_do_intern /home/kevin/src/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:2052 - 11 0x13a91a4 in wm_handlers_do /home/kevin/src/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:2136 - 12 0x13a9ad5 in wm_event_do_handlers /home/kevin/src/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:2419 - 13 0x1392a66 in WM_main /home/kevin/src/blender-git/blender/source/blender/windowmanager/intern/wm.c:489 - 14 0x1390de1 in main /home/kevin/src/blender-git/blender/source/creator/creator.c:2097 - 15 0x7f0a8d801ec4 in __libc_start_main (/lib/x86_64-linux-gnu/libc.so.6+0x21ec4) Thread #14 created by T0 here: - 0 0x7f0a92186474 in pthread_create (/usr/lib/x86_64-linux-gnu/libasan.so.2+0x36474) - 1 0x2aae11f in BLI_task_scheduler_create /home/kevin/src/blender-git/blender/source/blender/blenlib/intern/task.c:248 - 2 0x2ab0249 in BLI_task_scheduler_get /home/kevin/src/blender-git/blender/source/blender/blenlib/intern/threads.c:174 - 3 0x23db885 in scene_update_objects /home/kevin/src/blender-git/blender/source/blender/blenkernel/intern/scene.c:1639 - 4 0x23de93f in scene_update_tagged_recursive /home/kevin/src/blender-git/blender/source/blender/blenkernel/intern/scene.c:1720 - 5 0x23dec96 in BKE_scene_update_tagged /home/kevin/src/blender-git/blender/source/blender/blenkernel/intern/scene.c:1823 - 6 0x13a32f8 in wm_event_do_notifiers /home/kevin/src/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:406 - 7 0x1392a6e in WM_main /home/kevin/src/blender-git/blender/source/blender/windowmanager/intern/wm.c:492 - 8 0x1390de1 in main /home/kevin/src/blender-git/blender/source/creator/creator.c:2097 - 9 0x7f0a8d801ec4 in __libc_start_main (/lib/x86_64-linux-gnu/libc.so.6+0x21ec4) SUMMARY: AddressSanitizer: heap-buffer-overflow /home/kevin/src/blender-git/blender/source/blender/blenlib/intern/string.c:728 BLI_strnlen Shadow bytes around the buggy address: 0x0c2c8001d8d0: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 0x0c2c8001d8e0: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 0x0c2c8001d8f0: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 0x0c2c8001d900: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 0x0c2c8001d910: 00 00 fa fa fa fa fa fa fa fa fa fa fa fa fa fa # >0x0c2c8001d920: fa fa fa fa fa fa fa fa[fa]fa fa fa fa fa fa fa 0x0c2c8001d930: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 0x0c2c8001d940: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 0x0c2c8001d950: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 0x0c2c8001d960: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 0x0c2c8001d970: 00 00 fa fa fa fa fa fa fa fa fa fa fa fa fa fa Shadow byte legend (one shadow byte represents 8 application bytes): ``` Addressable: 00 Partially addressable: 01 02 03 04 05 06 07 Heap left redzone: fa Heap right redzone: fb Freed heap region: fd Stack left redzone: f1 Stack mid redzone: f2 Stack right redzone: f3 Stack partial redzone: f4 Stack after return: f5 Stack use after scope: f8 Global redzone: f9 Global init order: f6 Poisoned by user: f7 Container overflow: fc Array cookie: ac Intra object redzone: bb ASan internal: fe ``` ## 20850==ABORTING ```

This issue was referenced by 50a19cc852

This issue was referenced by 50a19cc8524b1bb81e71e69595d737a93511b3bc

Added subscriber: @ideasman42

Added subscriber: @ideasman42

@kevindietrich. committed alternate fix, empty UV layer name is allowed, it just falls back to the active.

@kevindietrich. committed alternate fix, empty UV layer name is allowed, it just falls back to the active.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47317
No description provided.