Fix T47317: Dynamic paint crashes with no UV layer